Add course editor screen, browser history, css transition group

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,8 @@
     "rootDir": "./src",
     "baseUrl": "./",
     "paths": {
+      "src/*": ["src/*"],
+
       "@Core/*": ["src/core/*"],
 
       "@Screens/*": ["src/screens/*"],
