--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,7 +21,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-svg": "^14.0.7",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
